# upsetter-py

./: .gitignore  README.md  pyproject.toml  release.sh  tox.ini
.github/workflows/: publish-release.yml
tests/: test_freezing.py
upsetter/: __init__.py  cli.py  remap_layout.py
